<resources>
    <string name="app_name">Rent Out Personal Stuff</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdIPz-48DaJYjTP3vbjo</string>
    <string name="title_activity_navigationdrawer">navigationdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forget_password">forget password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_here">Register here</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="fullname">FULLNAME</string>
    <string name="hint">************</string>
    <string name="password">PASSWORD</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="find_cars_furniture_and_more">Find Cars , Furniture and more...</string>
    <string name="dresses">Dresses</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
