<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent">
<!--    logo of the page-->
    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/rent">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:textSize="30dp"
        android:id="@+id/welcome"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:text="@string/welcome"
        android:layout_marginLeft="25dp">

    </TextView>

    <TextView
        android:id="@+id/cont"
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/red"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="25dp"
        android:id="@+id/layoutone"
        android:background="@drawable/textviewback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cont">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="USERNAME"
            android:id="@+id/username"
            android:textColor="@color/red"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:layout_below="@id/username"
            android:id="@+id/txt_email"
            android:hint="Enter Username"
            android:paddingTop="4dp"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_mail_outline_black_24dp"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:id="@+id/layouttwo"
        android:background="@drawable/textviewback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PASSWORD"
            android:id="@+id/userpassword"
            android:textColor="@color/red"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:layout_below="@id/userpassword"
            android:paddingTop="4dp"
            android:id="@+id/txt_password"
            android:textSize="18sp"
            android:hint="@string/hint"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layouttwo"
        app:layout_constraintEnd_toEndOf="@id/layouttwo"
        android:layout_marginTop="5dp"
        android:textColor="@color/red"
        android:id="@+id/forgetpass"
        android:text="@string/forget_password">

    </TextView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="10dp"
        android:text="Login"
        android:id="@+id/btnlogin"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/forgetpass"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnlogin"
        app:layout_constraintStart_toStartOf="@id/btnlogin"
        app:layout_constraintEnd_toEndOf="@id/btnlogin"
        android:text="@string/don_t_have_an_account"
        android:id="@+id/dontaccount"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/txt_registerhere"
        app:layout_constraintTop_toBottomOf="@id/dontaccount"
        app:layout_constraintStart_toStartOf="@id/dontaccount"
        app:layout_constraintEnd_toEndOf="@id/dontaccount"
        android:text="@string/register_here"
        android:textColor="@color/red"
        android:layout_marginTop="5dp">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>