<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
    android:background="#ffffff"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:textSize="30sp"
            android:id="@+id/welcome"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:text="@string/welcome"
            android:layout_marginLeft="25dp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="13dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/red"
            android:id="@+id/cont"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            android:text="@string/sign_up_to_continue"
            android:layout_marginLeft="25dp">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="25dp"
            android:id="@+id/layoutone"
            android:background="@drawable/textviewback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cont">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="USERNAME"
                android:id="@+id/username"
                android:textColor="@color/red"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:layout_below="@id/username"
                android:id="@+id/txt_uname"
                android:paddingTop="4dp"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:hint="Enter Username"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/ic_person_black_24dp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:id="@+id/layouttwo"
            android:background="@drawable/textviewback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:id="@+id/userpassword"
                android:textColor="@color/red"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:layout_below="@id/userpassword"
                android:paddingTop="4dp"
                android:id="@+id/txt_fname"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:hint="Enter Fullname"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_accessibility_black_24dp"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/ic_accessibility_black_24dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:id="@+id/layoutthree"
            android:background="@drawable/textviewback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layouttwo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E-MAIL"
                android:id="@+id/usermail"
                android:textColor="@color/red"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:layout_below="@id/usermail"
                android:paddingTop="4dp"
                android:textSize="15sp"
                android:id="@+id/txt_email"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:hint="Enter Email"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:id="@+id/layoutfour"
            android:background="@drawable/textviewback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutthree">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/userpass"
                android:textColor="@color/red"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:layout_below="@id/userpass"
                android:paddingTop="4dp"
                android:textSize="15sp"
                android:id="@+id/txt_password"
                android:inputType="textPassword"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:id="@+id/layoutfive"
            android:background="@drawable/textviewback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutfour">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONFIRM PASSWORD"
                android:id="@+id/userpass2"
                android:textColor="@color/red"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:layout_below="@id/userpass2"
                android:paddingTop="4dp"
                android:textSize="18sp"
                android:id="@+id/txt_cpassword"
                android:inputType="textPassword"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp" />
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="10dp"
            android:text="Registered"
            android:id="@+id/buttonregister"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:layout_constraintTop_toBottomOf="@id/layoutfive"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonregister"
            app:layout_constraintStart_toStartOf="@id/buttonregister"
            app:layout_constraintEnd_toEndOf="@id/buttonregister"
            android:text="@string/already_have_an_account"
            android:id="@+id/dontaccount"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/dontaccount"
            app:layout_constraintStart_toStartOf="@id/dontaccount"
            app:layout_constraintEnd_toEndOf="@id/dontaccount"
            android:text="Login here"
            android:textColor="@color/red"
            android:id="@+id/txt_login"
            android:layout_marginTop="5dp">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>